# regex-tokenizer

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: compilation_error.rs  lib.rs  parse_declaration.rs
src/: lib.rs  regex.rs  tokenization.rs
src/regex/: automata.rs
src/regex/automata/: element.rs  quantifier.rs  token_generator.rs
src/tokenization/: matcher.rs
tests/: test.rs
tests/compile-fail/: replicated_type.rs  replicated_type.stderr  wrong-name.rs  wrong-name.stderr  wrong-regex.rs  wrong-regex.stderr  wrong-separator.rs  wrong-separator.stderr
tests/run-pass/: tokenization.rs  valid-declaration.rs
