[package]
name = "regex-tokenizer-impl"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Carmine Margiotta <cmargiotta@posteo.net>"]
description = "A regex tokenizer-macro implementation"
homepage = "https://github.com/cmargiotta/regex-tokenizer"
repository = "https://github.com/cmargiotta/regex-tokenizer"

[dependencies]
regex = "1"
quote = "1.0.26"
proc-macro2 = "1.0.52"

[lib]
proc-macro = true